--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,5 +1,5 @@
 @inproceedings{rezende2015variational,
-  title={Variational inference with normalizing flows},
+  title={Variational Inference with Normalizing Flows},
   author={Rezende, Danilo and Mohamed, Shakir},
   booktitle={International conference on machine learning},
   pages={1530--1538},
@@ -32,7 +32,7 @@
 
 @book{koehn2009statistical,
     author        = {Koehn, Philipp},
-    title         = {Statistical machine translation},
+    title         = {Statistical Machine Translation},
     address       = {Cambridge, UK},
     isbn          = {978-0521874151},
     publisher     = {Cambridge University Press},
@@ -42,7 +42,7 @@
 
 @article{popel-etal-2020-transforming,
   journal = {Nature Communications},
-  title = {Transforming machine translation: a deep learning system reaches news translation quality comparable to human professionals},
+  title = {Transforming Machine Translation: A Deep Learning System Reaches News Translation Quality Comparable to Human Professionals},
   author = {Martin Popel and Marketa Tomkova and Jakub Tomek and {\L}ukasz Kaiser and Jakob Uszkoreit and Ond{\v{r}}ej Bojar and Zden{\v{e}}k {\v{Z}}abokrtsk{\'{y}}},
   year = {2020},
   volume = {11},
@@ -55,7 +55,7 @@
 
 
 @article{duchi2011adaptive,
-  title={Adaptive subgradient methods for online learning and stochastic optimization.},
+  title={Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.},
   author={Duchi, John and Hazan, Elad and Singer, Yoram},
   journal={Journal of machine learning research},
   volume={12},
@@ -64,14 +64,14 @@
 }
 
 @article{zeiler2012adadelta,
-  title={Adadelta: an adaptive learning rate method},
+  title={Adadelta: An Adaptive Learning Rate Method},
   author={Zeiler, Matthew D},
   journal={arXiv preprint arXiv:1212.5701},
   year={2012}
 }
 
 @misc{tieleman2012lecture,
-  title={{Lecture 6.5---RmsProp: Divide the gradient by a running average of its recent magnitude}},
+  title={{Lecture 6.5---RmsProp: Divide the Gradient by a Running Average of its Recent Magnitude}},
   author={Tieleman, T. and Hinton, G.},
   howpublished={COURSERA: Neural Networks for Machine Learning},
   year={2012}
@@ -139,7 +139,7 @@ author={
 
 
 @article{conneau-lample-2019-cross,
-  title={Cross-lingual language model pretraining},
+  title={Cross-Lingual Language Model Pretraining},
   author={Conneau, Alexis and Lample, Guillaume},
   journal={Advances in Neural Information Processing Systems},
   volume={32},
@@ -149,7 +149,7 @@ author={
 
 
 @article{joulin2016fasttext,
-  title={FastText.zip: Compressing text classification models},
+  title={FastText.zip: Compressing Text Classification Models},
   author={Joulin, Armand and Grave, Edouard and Bojanowski, Piotr and Douze,
                   Matthijs and J{\'e}gou, H{\'e}rve and Mikolov, Tomas},
   journal={arXiv preprint arXiv:1612.03651},
@@ -158,7 +158,7 @@ author={
 
 
 @InProceedings{glorot2010understanding,
-  title = 	 {Understanding the difficulty of training deep feedforward neural networks},
+  title = 	 {Understanding the Difficulty of Training Deep Feedforward Neural Networks},
   author = 	 {Glorot, Xavier and Bengio, Yoshua},
   booktitle = 	 {Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
   pages = 	 {249--256},
@@ -174,7 +174,8 @@ author={
  }
 
 @inproceedings{eyben2009speech,
-  title={From speech to letters-using a novel neural network architecture for grapheme based asr},
+  title={From Speech to Letters -- Using a Novel Neural Network Architecture
+                  for Grapheme Based {ASR}},
   author={Eyben, Florian and W{\"o}llmer, Martin and Schuller, Bj{\"o}rn and Graves, Alex},
   booktitle={2009 IEEE Workshop on Automatic Speech Recognition \& Understanding},
   pages={376--380},
@@ -183,7 +184,7 @@ author={
 }
 
 @inproceedings{graves2014towards,
-  title={Towards end-to-end speech recognition with recurrent neural networks},
+  title={Towards End-to-End Speech Recognition with Recurrent Neural Networks},
   author={Graves, Alex and Jaitly, Navdeep},
   booktitle={International conference on machine learning},
   pages={1764--1772},
@@ -192,8 +193,8 @@ author={
 }
 
 @inproceedings{liwicki2007novel,
-  title={A novel approach to on-line handwriting recognition based on
-                  bidirectional long short-term memory networks},
+  title={A Novel Approach to On-Line Handwriting Recognition Based on
+                  Bidirectional Long Short-Term Memory Networks},
   author={Liwicki, Marcus and Graves, Alex and Fern{\`a}ndez, Santiago and
                   Bunke, Horst and Schmidhuber, J{\"u}rgen},
   booktitle={Proceedings of the 9th International Conference on Document
@@ -219,7 +220,7 @@ author={
 }
 
 @article{williams1992simple,
-  title={Simple statistical gradient-following algorithms for connectionist reinforcement learning},
+  title={Simple Statistical Gradient-Following Algorithms for Connectionist Reinforcement Learning},
   author={Williams, Ronald J},
   journal={Machine learning},
   volume={8},
@@ -230,7 +231,7 @@ author={
 }
 
 @inproceedings{bengio2015scheduled,
-  title={Scheduled sampling for sequence prediction with recurrent Neural networks},
+  title={Scheduled Sampling for Sequence Prediction with Recurrent Neural Networks},
   author={Bengio, Samy and Vinyals, Oriol and Jaitly, Navdeep and Shazeer, Noam},
   booktitle={Proceedings of the 28th International Conference on Neural Information Processing Systems-Volume 1},
   pages={1171--1179},
@@ -239,7 +240,7 @@ author={
 
 
 @article{schwenk2019wikimatrix,
-  title={Wikimatrix: Mining 135m parallel sentences in 1620 language pairs from wikipedia},
+  title={Wikimatrix: Mining 135{M} Parallel Sentences in 1620 Language Pairs from Wikipedia},
   author={Schwenk, Holger and Chaudhary, Vishrav and Sun, Shuo and Gong, Hongyu and Guzm{\'a}n, Francisco},
   journal={arXiv preprint arXiv:1907.05791},
   year={2019}
@@ -280,7 +281,7 @@ author={
 }
 
 @InProceedings{sun2020em,
-  title =	 {An {EM} Approach to Non-autoregressive Conditional Sequence
+  title =	 {An {EM} Approach to Non-Autoregressive Conditional Sequence
                   Generation},
   author =	 {Sun, Zhiqing and Yang, Yiming},
   booktitle =	 {Proceedings of the 37th International Conference on Machine
@@ -510,7 +511,7 @@ author={
 }
 
 @InProceedings{kasai2020nonautoregressive,
-  title =	 {Non-autoregressive Machine Translation with Disentangled
+  title =	 {Non-Autoregressive Machine Translation with Disentangled
                   Context Transformer},
   author =	 {Kasai, Jungo and Cross, James and Ghazvininejad, Marjan and
                   Gu, Jiatao},
@@ -729,8 +730,8 @@ author={
 }
 
 @inproceedings{mikolov-etal-2013-distributed,
-  title =	 {Distributed representations of words and phrases and their
-                  compositionality},
+  title =	 {Distributed Representations of Words and Phrases and Their
+                  Compositionality},
   author =	 {Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado,
                   Greg S and Dean, Jeff},
   booktitle =	 {Advances in neural information processing systems},
@@ -739,7 +740,7 @@ author={
 }
 
 @article{bengio2003neural,
-  title =	 {A neural probabilistic language model},
+  title =	 {A Neural Probabilistic Language Model},
   author =	 {Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal
                   and Jauvin, Christian},
   journal =	 {Journal of machine learning research},
@@ -773,7 +774,7 @@ author={
 @inproceedings{bengio2007greedy,
   author =	 {Bengio, Yoshua and Lamblin, Pascal and Popovici, Dan and
                   Larochelle, Hugo},
-  title =	 {Greedy layer-wise training of deep networks},
+  title =	 {Greedy Layer-Wise Training of Deep Networks},
   booktitle =	 {Advances in Neural Information Processing Systems 20},
   address =	 {Vancouver, Canada},
   isbn =	 9780262256919,
@@ -800,8 +801,8 @@ author={
 @article{conneau2017supervised,
   author =	 {Conneau, Alexis and Kiela, Douwe and Schwenk, Holger and
                   Barrault, Lo\"{i}c and Bordes, Antoine},
-  title =	 {Supervised learning of universal sentence representations from
-                  natural language inference data},
+  title =	 {Supervised Learning of Universal Sentence Representations from
+                  Natural Language Inference Data},
   journal =	 {CoRR},
   issn =	 {2331-8422},
   volume =	 {abs/1705.02364},
@@ -863,8 +864,8 @@ author={
 
 @article{graves2005framewise,
   author =	 {Graves, Alex and Schmidhuber, J\"{u}rgen},
-  title =	 {Framewise phoneme classification with bidirectional LSTM and
-                  other neural network architectures},
+  title =	 {Framewise Phoneme Classification with Bidirectional {LSTM} and
+                  Other Neural Network Architectures},
   journal =	 {Neural Networks},
   address =	 {Amsterdam, Netherlands},
   issn =	 {0893-6080},
@@ -879,8 +880,8 @@ author={
 @inproceedings{graves2006connectionist,
   author =	 {Graves, Alex and Fern{\'a}ndez, Santiago and Gomez, Faustino
                   and Schmidhuber, J\"{u}rgen},
-  title =	 {Connectionist temporal classification: labelling unsegmented
-                  sequence data with recurrent neural networks},
+  title =	 {Connectionist Temporal Classification: Labelling Unsegmented
+                  Sequence Data with Recurrent Neural Networks},
   booktitle =	 {Proceedings of the 23rd International Conference on Machine
                   Learning},
   address =	 {Pittsburgh, PA, USA},
@@ -932,7 +933,7 @@ author={
 
 @article{hochreiter1997long,
   author =	 {Hochreiter, Sepp and Schmidhuber, J\"{u}rgen},
-  title =	 {Long short-term memory},
+  title =	 {Long Short-Term Memory},
   journal =	 {Neural Computation},
   address =	 {Cambridge, MA, USA},
   issn =	 {0899-7667},
@@ -964,38 +965,6 @@ author={
   year =	 2014
 }
 
-@inproceedings{krizhevsky2012imagenet,
-  author =	 {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
-  title =	 {Imagenet classification with deep convolutional neural
-                  networks},
-  booktitle =	 {Advances in Neural Information Processing Systems 25},
-  address =	 {Red Hook, NY, USA},
-  isbn =	 9781627480031,
-  issn =	 {0001-0782},
-  month =	 {May},
-  number =	 6,
-  pages =	 {1097--1105},
-  publisher =	 {Curran Associates, Inc.},
-  volume =	 60,
-  year =	 2012
-}
-
-@inproceedings{kulkarni2011baby,
-  author =	 {Kulkarni, Girish and Premraj, Visruth and Dhar, Sagnik and Li,
-                  Siming and Choi, Yejin and Berg, Alexander C and Berg, Tamara
-                  L},
-  title =	 {Baby talk: Understanding and generating simple image
-                  descriptions.},
-  booktitle =	 {Conference on Computer Vision and Pattern Recognition
-                  ({CVPR})},
-  address =	 {Colorado Sprtings, CO, USA},
-  isbn =	 {978-1-4577-0394-2},
-  month =	 {June},
-  pages =	 {1601-1608},
-  publisher =	 {{IEEE} Computer Society},
-  year =	 2011
-}
-
 @inproceedings{lafferty2001conditional,
   author =	 {Lafferty, John and McCallum, Andrew and Pereira, Fernando},
   title =	 {Conditional Random Fields: Probabilistic Models for Segmenting
@@ -1013,8 +982,8 @@ author={
 @article{srivastava2014dropout,
   author =	 {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex
                   and Sutskever, Ilya and Salakhutdinov, Ruslan},
-  title =	 {Dropout: A simple way to prevent neural networks from
-                  overfitting},
+  title =	 {Dropout: A Simple Way to Prevent Neural Networks from
+                  Overfitting},
   journal =	 {The Journal of Machine Learning Research},
   address =	 {Brookline, MA, USA},
   issn =	 {1532-4435},
@@ -1036,27 +1005,11 @@ author={
   year =	 2014
 }
 
-@inproceedings{szegedy2015going,
-  author =	 {Szegedy, Christian and Liu, Wei and Jia, Yangqing and
-                  Sermanet, Pierre and Reed, Scott E and Anguelov, Dragomir and
-                  Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
-  title =	 {Going deeper with convolutions},
-  booktitle =	 {Conference on Computer Vision and Pattern Recognition
-                  ({CVPR})},
-  address =	 {Boston, MA, USA},
-  isbn =	 9781467369640,
-  month =	 {June},
-  pages =	 {1--9},
-  publisher =	 {{IEEE} Computer Society},
-  year =	 2015
-}
-
-
 @inproceedings{vaswani2017attention,
   author =	 {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and
                   Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and
                   Kaiser, {\L}ukasz and Polosukhin, Illia},
-  title =	 {Attention is all you need},
+  title =	 {Attention is All You Need},
   booktitle =	 {Advances in Neural Information Processing Systems 30},
   address =	 {Long Beach, CA, USA},
   month =	 {December},
@@ -1069,7 +1022,7 @@ author={
   author={Schuster, Mike and Nakajima, Kaisuke},
   booktitle={2012 IEEE International Conference on Acoustics, Speech and Signal
                   Processing (ICASSP)},
-  title={Japanese and Korean voice search},
+  title={Japanese and Korean Voice Search},
   year={2012},
   volume={},
   number={},
