--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -6,46 +6,48 @@
   }%
 }
 
-\newacronym{nmt}{NMT}{neural machine translation}
-\newacronym{nlp}{NLP}{natural language processing}
-\newacronym{rnn}{RNN}{recurrent neural network}
-\newacronym{cnn}{CNN}{convolutional neural network}
-\newacronym{san}{SAN}{self-attentive network}
+
 \newacronym{ai}{AI}{artificial intelligence}
-\newacronym{mmt}{MMT}{multimodal machine translation}
-\newacronym{wmt}{WMT}{Conference on Machine Translation}
-\newacronym{ml}{ML}{machine learning}
-\newacronym{lstm}{LSTM}{Long Short-Term Memory}
-\newacronym{gru}{GRU}{Gated Recurrent Unit}
-\newacronym{relu}{ReLU}{Rectified Linear Unit}
-\newacronym{mt}{MT}{machine translation}
-\newacronym{lm}{LM}{language model}
-\newacronym{oov}{OOV}{out-of-vocabulary}
-\newacronym{bpe}{BPE}{byte-pair encoding}
 \newacronym{ar}{AR}{autoregressive}
-\newacronym{nar}{NAR}{non-autoregressive}
-\newacronym{nat}{NAT}{non-autoregressive \myglsentry{nmt}}
-\newacronym{ctc}{CTC}{connectionist temporal classification}
-\newacronym{npd}{NPD}{noisy parallel decoding}
-\newacronym{bleu}{BLEU}{bilingual evaluation understudy}
-\newacronym{wngt}{WNGT}{Workshop on Neural Generation and Translation}
 \newacronym{asr}{ASR}{automatic speech recognition}
-\newacronym{sgd}{SGD}{stochastic gradient descent}
-\newacronym{tpu}{TPU}{tensor processing unit}
 \newacronym{axe}{AXE}{aligned cross-entropy}
+\newacronym{bleu}{BLEU}{bilingual evaluation understudy}
+\newacronym{bpe}{BPE}{byte-pair encoding}
 \newacronym{cmlm}{CMLM}{conditional masked language model}
-\newacronym{mlm}{MLM}{masked language model}
-\newacronym{xlm}{XLM}{cross-lingual language model}
-\newacronym{glat}{GLAT}{Glancing Transformer}
-\newacronym{lt}{LT}{Latent Transformer}
-\newacronym{levt}{LevT}{Levenshtein Transformer}
-\newacronym{natreg}{NAT-REG}{\myglsentry{nat} with auxiliary regularization}
-\newacronym{hintnat}{Hint-NAT}{hint-based training for \myglsentry{nat}}
-\newacronym{jmnat}{JM-NAT}{jointly masked model for \myglsentry{nat}}
+\newacronym{cnn}{CNN}{convolutional neural network}
 \newacronym{crf}{CRF}{conditional random fields}
+\newacronym{ctc}{CTC}{connectionist temporal classification}
 \newacronym{dcrf}{DCRF}{dynamic-transition \myglsentry{crf}}
 \newacronym{em}{EM}{expectation-maximization}
-\newacronym{odd}{ODD}{optimal deduplicated decoding}
 \newacronym{emodd}{EM+ODD}{\myglsentry{em} training + \myglsentry{odd}}
+\newacronym{glat}{GLAT}{Glancing Transformer}
+\newacronym{gru}{GRU}{Gated Recurrent Unit}
+\newacronym{hintnat}{Hint-NAT}{hint-based training for \myglsentry{nat}}
+\newacronym{jmnat}{JM-NAT}{jointly masked model for \myglsentry{nat}}
+\newacronym{levt}{LevT}{Levenshtein Transformer}
+\newacronym{lm}{LM}{language model}
+\newacronym{lpd}{LPD}{length parallel decoding}
+\newacronym{lstm}{LSTM}{Long Short-Term Memory}
+\newacronym{lt}{LT}{Latent Transformer}
+\newacronym{ml}{ML}{machine learning}
+\newacronym{mlm}{MLM}{masked language model}
+\newacronym{mmt}{MMT}{multimodal machine translation}
+\newacronym{mt}{MT}{machine translation}
+\newacronym{nar}{NAR}{non-autoregressive}
+\newacronym{nat}{NAT}{non-autoregressive \myglsentry{nmt}}
+\newacronym{natreg}{NAT-REG}{\myglsentry{nat} with auxiliary regularization}
+\newacronym{nlp}{NLP}{natural language processing}
+\newacronym{nmt}{NMT}{neural machine translation}
+\newacronym{npd}{NPD}{noisy parallel decoding}
 \newacronym{oaxe}{OaXE}{order-agnostic cross-entropy}
+\newacronym{odd}{ODD}{optimal deduplicated decoding}
+\newacronym{oov}{OOV}{out-of-vocabulary}
+\newacronym{relu}{ReLU}{Rectified Linear Unit}
+\newacronym{rnn}{RNN}{recurrent neural network}
+\newacronym{san}{SAN}{self-attentive network}
+\newacronym{sgd}{SGD}{stochastic gradient descent}
 \newacronym{smart}{SMART}{semi-autoregressive training}
+\newacronym{tpu}{TPU}{tensor processing unit}
+\newacronym{wmt}{WMT}{Conference on Machine Translation}
+\newacronym{wngt}{WNGT}{Workshop on Neural Generation and Translation}
+\newacronym{xlm}{XLM}{cross-lingual language model}
