hyphenizing log-things

--- a/thesis/02-nmt.tex
+++ b/thesis/02-nmt.tex
@@ -701,7 +701,7 @@ output distributions $p$ and $p_{\text{ref}}$ are conditioned on the preceding
 target words.
 
 Given model parameters $\theta$, the word-level cross-entropy is summed across
-the sentence pairs in the data $D$ to obtain the negative log likelihood of the
+the sentence pairs in the data $D$ to obtain the negative log-likelihood of the
 dataset $J(\theta)$:
 %
 \begin{equation}
