--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -14,6 +14,8 @@
 %  \Publisher{Charles University}
 %\end{filecontents*}
 
+\PassOptionsToPackage{hyperfootnotes=false}{hyperref}
+
 % fix pdfx
 \usepackage{etoolbox}
 \makeatletter
@@ -67,7 +69,7 @@
 \usepackage{algpseudocode}
 \usepackage{mathtools}
 
-\usepackage[acronym]{glossaries}
+\usepackage[acronym, nomain]{glossaries}
 \usepackage[shortcuts=ac,automake]{glossaries-extra}
 \preto\chapter{\glsresetall}
 
@@ -76,6 +78,12 @@
 \usepackage{subcaption} % sub figures in a fiture
 \usepackage{standalone} % include standoalone tikz images
 \usepackage{bibentry}
+
+% hack bibentry command for list of publications
+\makeatletter
+\renewcommand\bibentry[1]{\nocite{#1}{\frenchspacing
+     \@nameuse{BR@r@#1\@extra@b@citeb}}}
+\makeatother
 
 \hypersetup{
     colorlinks=false,
